--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-    "name": "lambda-from-scratch",
-    "description": "Start from scratch starter project",
+    "name": "playlet",
+    "description": "A Serverless & Loosely Coupled Video Transcoding & Delivery Project",
     "version": "0.0.1",
     "private": true,
-    "dependencies": {
-    },
     "devDependencies": {
-        "jest": "^29.5.0"
+        "@types/aws-lambda": "^8.10.147",
+        "@types/node": "^22.10.5",
+        "jest": "^29.5.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2"
     },
     "scripts": {
         "test": "jest"
-    }
+    },
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
