--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
         "@aws-sdk/client-dynamodb": "^3.724.0",
-        "@aws-sdk/client-lambda": "^3.723.0"
+        "@aws-sdk/client-lambda": "^3.723.0",
+        "@aws-sdk/client-s3": "^3.726.0",
+        "@aws-sdk/s3-presigned-post": "^3.726.1"
     }
 }
