Queue Visibility Timeout increased

--- a/template.yml
+++ b/template.yml
@@ -342,6 +342,7 @@ Resources:
     Properties:
       QueueName: Preprocessing-Queue
       MessageRetentionPeriod: 345600
+      VisibilityTimeout: 120 
   TransportStorageToPreprocessingQueuePermission:
     Type: AWS::SQS::QueuePolicy
     Properties:
