--- a/template.yml
+++ b/template.yml
@@ -12,6 +12,7 @@ Globals:
         CLIENT_ID: !Ref UserPoolClient
         UPLOAD_SIZE_LIMIT: !Ref UploadSizeLimit
         UPLOAD_TIME_LIMIT: !Ref UploadTimeLimit
+        TRANSPORTSTORAGE_BUCKET_NAME: !Ref TransportStorage
     LoggingConfig:
       ApplicationLogLevel: WARN
       LogFormat: JSON
@@ -342,7 +343,10 @@ Resources:
     Properties:
       QueueName: Preprocessing-Queue
       MessageRetentionPeriod: 345600
-      VisibilityTimeout: 120 
+      VisibilityTimeout: 120
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt CommonDLQ.Arn
+        maxReceiveCount: 3
   TransportStorageToPreprocessingQueuePermission:
     Type: AWS::SQS::QueuePolicy
     Properties:
@@ -379,3 +383,7 @@ Resources:
           Properties:
             Queue: !GetAtt PreprocessingQueue.Arn
             BatchSize: 1
+  CommonDLQ:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 345600
