--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@aws-sdk/client-dynamodb": "^3.724.0",
         "@aws-sdk/client-lambda": "^3.723.0",
         "@aws-sdk/client-s3": "^3.726.0",
+        "@aws-sdk/lib-storage": "^3.726.1",
         "@aws-sdk/s3-presigned-post": "^3.726.1"
     }
 }
