--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "devDependencies": {
         "@types/aws-lambda": "^8.10.147",
+        "@types/fluent-ffmpeg": "^2.1.27",
         "@types/node": "^22.10.5",
         "jest": "^29.5.0",
         "ts-node": "^10.9.2",
@@ -23,6 +24,8 @@
         "@aws-sdk/client-lambda": "^3.723.0",
         "@aws-sdk/client-s3": "^3.726.0",
         "@aws-sdk/lib-storage": "^3.726.1",
-        "@aws-sdk/s3-presigned-post": "^3.726.1"
+        "@aws-sdk/s3-presigned-post": "^3.726.1",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "fluent-ffmpeg": "^2.1.3"
     }
 }
