--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
         "@types/node": "^22.10.5",
         "jest": "^29.5.0",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
+        "@aws-sdk/client-dynamodb": "^3.724.0",
+        "@aws-sdk/client-lambda": "^3.723.0",
+        "@aws-sdk/client-s3": "^3.726.0",
+        "@aws-sdk/lib-storage": "^3.726.1",
+        "@aws-sdk/s3-presigned-post": "^3.726.1",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "fluent-ffmpeg": "^2.1.3"
     },
     "scripts": {
         "test": "jest"
@@ -19,13 +27,5 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
-        "@aws-sdk/client-dynamodb": "^3.724.0",
-        "@aws-sdk/client-lambda": "^3.723.0",
-        "@aws-sdk/client-s3": "^3.726.0",
-        "@aws-sdk/lib-storage": "^3.726.1",
-        "@aws-sdk/s3-presigned-post": "^3.726.1",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "fluent-ffmpeg": "^2.1.3"
     }
 }
