--- a/template.yml
+++ b/template.yml
@@ -386,6 +386,34 @@ Resources:
         - AWSLambdaBasicExecutionRole
         - AWSXrayWriteOnlyAccess
         - AmazonS3FullAccess
+        - Statement:
+            - Effect: Allow
+              Action:
+                - s3:GetObject
+                - s3:GetObjectAcl
+                - s3:GetObjectLegalHold
+                - s3:GetObjectRetention
+                - s3:GetObjectTorrent
+                - s3:GetObjectVersion
+                - s3:GetObjectVersionAcl
+                - s3:GetObjectVersionForReplication
+                - s3:GetObjectVersionTorrent
+                - s3:ListBucket
+                - s3:ListBucketMultipartUploads
+                - s3:ListBucketVersions
+                - s3:ListMultipartUploadParts
+                - s3:AbortMultipartUpload
+                - s3:DeleteObject
+                - s3:DeleteObjectVersion
+                - s3:PutObject
+                - s3:PutObjectLegalHold
+                - s3:PutObjectRetention
+                - s3:RestoreObject
+              Resource:
+                - !Sub arn:${AWS::Partition}:s3:::${ContentStorage}
+                - !Sub arn:${AWS::Partition}:s3:::${ContentStorage}/*
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MetadataStorage
       Events:
         PreprocessingQueue:
           Type: SQS
@@ -394,6 +422,12 @@ Resources:
             BatchSize: 1
       Layers:
         - !Ref ResourceLayer
+      Environment:
+        Variables:
+          CONTENTSTORAGE_BUCKET_NAME: !Ref ContentStorage
+          CONTENTSTORAGE_BUCKET_ARN: !GetAtt ContentStorage.Arn
+          METADATASTORAGE_TABLE_NAME: !Ref MetadataStorage
+          METADATASTORAGE_TABLE_ARN: !GetAtt MetadataStorage.Arn
   # DLQ for failed messages 
   CommonDLQ:
     Type: AWS::SQS::Queue
@@ -410,3 +444,48 @@ Resources:
       RetentionPolicy: Delete
     Metadata:
       BuildMethod: nodejs18.x
+  ContentStorage:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub ${AWS::StackName}-contentst-${AWS::AccountId}
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: aws:kms
+              KMSMasterKeyID: alias/aws/s3
+      PublicAccessBlockConfiguration:
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+  ContentStorageBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref ContentStorage
+      PolicyDocument:
+        Id: RequireEncryptionInTransit
+        Version: '2012-10-17'
+        Statement:
+          - Principal: '*'
+            Action: '*'
+            Effect: Deny
+            Resource:
+              - !GetAtt ContentStorage.Arn
+              - !Sub ${ContentStorage.Arn}/*
+            Condition:
+              Bool:
+                aws:SecureTransport: 'false'
+  MetadataStorage:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: userId
+          AttributeType: S
+        - AttributeName: userId
+          AttributeType: S
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: assetId
+          KeyType: HASH
+        - AttributeName: userId
+          KeyType: RANGE
+      StreamSpecification:
+        StreamViewType: NEW_AND_OLD_IMAGES
