--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ node_modules
 # FFmpeg binaries
 src/layers/resource-layer/opt/ffmpeg/*
 !src/layers/resource-layer/opt/ffmpeg/.gitkeep
+
+src/utils/temp.ts
