--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
     "version": "0.0.1",
     "private": true,
     "devDependencies": {
-        "@types/aws-lambda": "^8.10.147",
-        "@types/fluent-ffmpeg": "^2.1.27",
-        "@types/node": "^22.10.5",
-        "jest": "^29.5.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.7.2",
         "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
         "@aws-sdk/client-dynamodb": "^3.724.0",
         "@aws-sdk/client-lambda": "^3.723.0",
         "@aws-sdk/client-s3": "^3.726.0",
+        "@aws-sdk/client-sqs": "^3.726.1",
         "@aws-sdk/lib-storage": "^3.726.1",
         "@aws-sdk/s3-presigned-post": "^3.726.1",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "fluent-ffmpeg": "^2.1.3"
+        "@types/aws-lambda": "^8.10.147",
+        "@types/fluent-ffmpeg": "^2.1.27",
+        "@types/node": "^22.10.5",
+        "fluent-ffmpeg": "^2.1.3",
+        "jest": "^29.5.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2"
     },
     "scripts": {
         "test": "jest"
@@ -25,7 +26,5 @@
     "main": "index.js",
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "dependencies": {
-    }
+    "license": "ISC"
 }
